fix(all): make compiler, checkstyle and spotbugs happy
Signed-off-by: SSpirits <admin@lv5.moe>
(cherry picked from commit ab9a5d83bb3f4128a29bc6ecb3cba0d5ceb64445)